--- a/gamezone/package.json
+++ b/gamezone/package.json
@@ -15,7 +15,10 @@
     "@react-navigation/stack": "^5.14.0",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
+    "expo-constants": "^14.4.2",
+    "expo-device": "^5.4.0",
     "expo-font": "~11.4.0",
+    "expo-notifications": "^0.20.1",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
